z-index the thing to fix https://github.com/INN/umbrella-ghn/issues/7#issuecomment-610037492

--- a/wp-content/themes/goliath/theme/assets/css/main.css
+++ b/wp-content/themes/goliath/theme/assets/css/main.css
@@ -1885,6 +1885,7 @@ textarea.form-control {
 
 .homepage-content {
 	padding: 0;
+  z-index: 100; /* https://github.com/INN/umbrella-ghn/issues/7#issuecomment-610037492 */
 }
 
 .main-content-column-1 {
